added fix for navs

--- a/src/app/Controls/nav-item/nav-item.component.html
+++ b/src/app/Controls/nav-item/nav-item.component.html
@@ -1,4 +1,4 @@
-<a class="text-white mx-2 px-2 py-1 border-b-2 border-transparent hover:border-white cursor-pointer transition-all duration-200 origin-bottom-left inline-block">
+<a class="text-white mx-2 whitespace-nowrap px-2 py-1 border-b-2 border-transparent hover:border-white cursor-pointer transition-all duration-200 origin-bottom-left inline-block">
     {{linkName}}
   </a>
   
