--- a/src/app/Controls/evidence-card/evidence-card.component.html
+++ b/src/app/Controls/evidence-card/evidence-card.component.html
@@ -1,8 +1,13 @@
 <div class="w-full ">
-    <div class="bg-[#520099] rounded-md ">
-        <div class="bg-[#D9D9D9] min-w-[80vw] min-h-[10rem] rounded-md -translate-x-1 -translate-y-1 p-8">
+    <div class="bg-[#520099] rounded-r-md rounded-t-md ">
+        <div class="bg-[#D9D9D9] min-w-[80vw] min-h-[14rem] rounded-r-md rounded-t-md -translate-x-1 -translate-y-1 p-8">
 
         </div>
+    </div>
+    <div class="my-6">
+        <p class="font-semibold text-4xl py-2">{{evidence.title}}</p>
+        <p class="font-medium text-3xl py-2 uppercase">{{evidence.name}}</p>
+        <p class="text-left text-2xl">{{evidence.description}}</p>
     </div>
 
 </div>
